--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,5 @@
 {
-  "arrowParens": "avoid",
-  "singleQuote": true
+    "arrowParens": "avoid",
+    "base": "/config/",
+    "singleQuote": true
 }
