--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "npmgraph",
-    "version": "2.9.1",
+    "version": "1.0.2",
     "type": "module",
-    "homepage": "https://modernik.github.io/config/",
+    "homepage": "https://modernik.github.io/npmGraph/",
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@hpcc-js/wasm": "^1.14.1",
@@ -16,7 +16,6 @@
         "d3-selection": "3.0.0",
         "d3-shape": "3.1.0",
         "filter-altered-clicks": "1.0.1",
-        "gh-pages": "^4.0.0",
         "md5": "2.3.0",
         "react": "^18.0.0",
         "react-dom": "18.0.0",
@@ -38,6 +37,7 @@
         "eslint": "8.13.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.0.0",
+        "gh-pages": "^4.0.0",
         "parcel": "^2.7.0",
         "prettier": "2.6.2",
         "process": "0.11.10",
@@ -47,10 +47,10 @@
     "scripts": {
         "build": "parcel build index.html",
         "release": "standard-version",
-        "start": "parcel serve index.html",
+        "start": "parcel index.html",
         "test": "eslint . && prettier -c .",
         "fix": "prettier -w .",
         "deploy": "gh-pages -d dist",
-        "predeploy": "npm run build"
+        "predeploy": "rm -rf dist && parcel build index.html"
     }
 }
